--- a/tpisit/chatClient/style.css
+++ b/tpisit/chatClient/style.css
@@ -5,9 +5,11 @@ body{
 section{
     display: inline-block;
     border: 0.2em solid black;
-    padding: 0.5em;
+    padding: 1.5em;
     border-radius: 2em;
     margin-top: 4em;
+    background-color: rgb(6, 194, 59 );
+    margin-top: 10em;
     
 }
 input{
@@ -17,10 +19,24 @@ button{
     margin-top: 2em;
     padding-left: 3em;
     padding-right: 3em;
+    background-color: brown;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+    text-align: center;
+    color: rgb(255, 255, 255);
 }
 textarea{
     display: block;
     text-align: center;
     margin-top: 2em;
     padding-right: 2em;
+}
+p{
+    color: rgb(8, 39, 161);
+    font-size: large;
+    font-weight: bold;
+}
+#ricevuta{
+    font-size: large;
+    font-weight: bold;
 }
