--- a/tpisit/chatClient/style.css
+++ b/tpisit/chatClient/style.css
@@ -40,3 +40,11 @@ p{
     font-size: large;
     font-weight: bold;
 }
+div {
+    border: 0.2em solid black;
+    padding: 1.5em;
+    border-radius: 2em;
+    margin-top: 4em;
+    background-color: rgb(6, 194, 59 );
+    margin-top: 10em;
+}
